--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=MotoMammiApplicationIDS
 cron.time.schedule=0/1 * * * * ?
 name.file.customers=Customer
 name.file.extension=.csv
+path.file.customer.name=MM_insurance_customers_
+path.file.vehicles.name=MM_insurance_vehicles_
+path.file.parts.name=MM_insurance_parts_
