--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,10 @@
 			<artifactId>pact-jvm-provider-junit5-spring</artifactId>
 			<version>4.0.10</version>
 		</dependency>
-
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
