--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
           <artifactId>hibernate-core</artifactId>
           <version>6.1.6.Final</version>
        </dependency>
+	   <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.5.1.Final</version>
+			<type>pom</type>
+		</dependency>
        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
        <dependency>
           <groupId>com.mysql</groupId>
