--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ path.file.customer.name=MM_insurance_customers_
 path.file.vehicles.name=MM_insurance_vehicles_
 path.file.parts.name=MM_insurance_parts_
 path.resources.input=src/main/resources/in/
+system.username=MotoMamiApplicationIDS
