--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 spring.application.name=MotoMammiApplicationIDS
+# Runs every 15 seconds
 cron.time.schedule=*/15 * * * * *
+# Runs at 1:00 AM every day for the customer task
+cron.task.customer=0 0 1 * * *
+cron.task.integrate.customer=0 0 1 * * *
+# Runs at 2:00 AM every day for the parts task
+cron.task.parts=0 0 2 * * *
+cron.task.integrate.parts=0 0 2 * * *
+# Runs at 3:00 AM every day for the vehicles task
+cron.task.vehicles=0 0 3 * * *
+cron.task.integrate.vehicles=0 0 3 * * *
+
+# At 1:00 AM on the first day of each month
+cron.task.generate.invoice=0 1 1 1 * *
+
 name.file.customers=Customer
 name.file.extension=.csv
 path.file.customer.name=MM_insurance_customers_
