--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ path.resources.input=src/main/resources/in/
 path.resources.output=src/main/resources/out/
 path.invoice.output=MM_invoice_
 system.username=MotoMamiApplicationIDS
+
+
+executed.by.system=SYSTEM
+executed.by.controller=API/Controller
