--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-# Sensitive data
-*.properties
+# Ignore all .properties files
+src/main/resources/**/*.properties
